--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afterglow Health</title>
-    <link rel="stylesheet" href="/Day 2  Materialize/materializedemo.css">
+    <link rel="stylesheet" href="materializedemo.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <style>
@@ -263,7 +263,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-Jqt3SqofawRcv/BI1PHpk8v5OE0tFfFmqF/IYI/Cx0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="/Day 2  Materialize/materializedemo.js"></script>
+    <script src="materializedemo.js"></script>
 
     <!-- Include additional JavaScript features as needed -->
     <script>
